@@ -3,6 +3,7 @@ package org.example.config;
 import jakarta.servlet.http.HttpServletResponse;
 import org.example.services.CustomUserDetailsServices;
 import org.example.services.JwtFilterServices;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -31,6 +32,18 @@ public class SecurityConfig {
 
     private final CustomUserDetailsServices userDetailsServices;
     private final JwtFilterServices filterServices;
+
+    @Value("${cors.allowed-origins}")
+    private List<String> allowedOrigins;
+
+    @Value("${cors.allowed-methods}")
+    private String allowedMethods;
+
+    @Value("${cors.allowed-headers}")
+    private String allowedHeaders;
+
+    @Value("${cors.allow-credentials:true}")
+    private boolean allowCredentials;
 
     public SecurityConfig(
             CustomUserDetailsServices userDetailsServices,
@@ -63,14 +76,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080")); // أضف جميع الأصول المطلوبة
-        config.setAllowCredentials(true); // مهم إذا كان العميل يرسل cookies
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(List.of("*"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        config.setAllowedOrigins(allowedOrigins);
+        config.setAllowCredentials(allowCredentials);
+        config.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+        config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
         config.setExposedHeaders(Arrays.asList("Authorization"));
-
-        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -81,21 +91,37 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // تمكين CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/users/login").permitAll()
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow preflight requests
-                        .requestMatchers( "/test").permitAll() // Allow preflight requests
-
+                        // Public endpoints
+                        .requestMatchers("/api/v1/users/login", "/api/v1/users/register").permitAll()
+                        .requestMatchers("/api/v1/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        
+                        // Swagger/OpenAPI endpoints
+                        .requestMatchers("/swagger-ui/**", "/api-docs/**").permitAll()
+                        
+                        // Product related public endpoints
+                        .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/plants/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
+                        
+                        // Payment webhooks
+                        .requestMatchers("/api/payments/webhook/**").permitAll()
+                        
+                        // Order tracking for guests
+                        .requestMatchers(HttpMethod.GET, "/api/orders/track/**").permitAll()
+                        
+                        // All other requests need authentication
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .authenticationProvider(authenticationProvider())
-                .addFilterBefore(filterServices, UsernamePasswordAuthenticationFilter.class).exceptionHandling(exceptions -> exceptions
+                .addFilterBefore(filterServices, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(exceptions -> exceptions
                         .authenticationEntryPoint((request, response, authException) -> {
-                            System.err.println("something went wrong");
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.setContentType("application/json");
                             response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"" +
